Fixed some important logic